tests/liberr_parse/a.js
/**
 * @flow
 */
var x: string = 0; // error: number ~> string
